--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="zh">
+<html>
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Simple Forum</title>
+    <title>Frontend</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
